[project]
name = "outils"
version = "0.1.0"
description = "Convert JSON data to Markdown notes with YAML frontmatter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "playwright>=1.41.2",
    "pypdf>=4.0.1",
]

[project.scripts]
outils = "outils.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
